--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@ font-family: 'Open Sans', sans-serif;
 
 .newsletter{
 color:grey;
-border: 1px solid#cfcfcf;
-padding:10px;
+border:thin solid #cfcfcf;
+border-radius: 3px;
+padding: 10px;
+position: relative;
+padding-bottom: 10px;
 
 }
 .newsletter button{
@@ -32,4 +35,29 @@ padding:10px;
  border: 1px solid#cfcfcf;
  border-radius: 3px;
  box-sizing: border-box;
+}
+
+.newsletter input#email {
+    display: block;
+    width: 100%;
+    height: 30px;
+    border: 1px solid #cfcfcf;
+    margin-bottom: 4px;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+.newsletter h3 {
+    margin-top: 0;
+}
+
+.newsletter #terms {
+    position: absolute;
+    top: 1px;
+}
+
+.newsletter #closex {
+    position: absolute;
+    top: 0;
+    right: 4px;
 }
